--- a/trunk/bookloan/src/log4j.properties
+++ b/trunk/bookloan/src/log4j.properties
@@ -18,7 +18,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d %l: %m%n
 
 # File output - 파일 appender 설정
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
-log4j.appender.logfile.File=C:/2012EwhaProject/log/card_logs.log
+log4j.appender.logfile.File=log/logs.log
 log4j.appender.logfile.MaxFileSize=50MB
 log4j.appender.logfile.MaxBackupIndex=10
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
