--- a/bookloan/src/log4j.properties
+++ b/bookloan/src/log4j.properties
@@ -1,5 +1,18 @@
 # Global logging configuration - 전역 리포팅 레벨 설정
-log4j.rootLogger=DEBUG, stdout, logfile
+log4j.rootLogger=INFO, stdout, logfile
+
+# Console output.. - 콘솔 appender 설정
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d %l: %m%n
+
+# File output - 파일 appender 설정
+log4j.appender.logfile=org.apache.log4j.RollingFileAppender
+log4j.appender.logfile.File=C:/logs.log
+log4j.appender.logfile.MaxFileSize=50MB
+log4j.appender.logfile.MaxBackupIndex=10
+log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.logfile.layout.ConversionPattern=%d %l: %m%n
 
 # SqlMap logging configuration... - SqlMap 리포팅 레벨 설정
 log4j.logger.com.ibatis=DEBUG 
@@ -9,20 +22,7 @@ log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
 log4j.logger.java.sql.Connection=DEBUG 
 log4j.logger.java.sql.Statement=DEBUG 
 log4j.logger.java.sql.PreparedStatement=DEBUG 
-log4j.logger.java.sql.ResultSet=DEBUG 
-
-# Console output.. - 콘솔 appender 설정
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %l: %m%n
-
-# File output - 파일 appender 설정
-log4j.appender.logfile=org.apache.log4j.RollingFileAppender
-log4j.appender.logfile.File=log/logs.log
-log4j.appender.logfile.MaxFileSize=50MB
-log4j.appender.logfile.MaxBackupIndex=10
-log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
-log4j.appender.logfile.layout.ConversionPattern=%d %l: %m%n
+log4j.logger.java.sql.ResultSet= 
 
 
 # Log Level
